src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>ClickToDial__Click_to_Call_Mobile__c</fullName>
        <description>You must dial + then the country code and number you wish to call. Example: +12125551313.
Specify the global country code setting or record level country code to automatically add &quot;+country code&quot; to your Click-to-Call links. GoTo App Setup| Customize| Develop| Custom Settings| Click-to-Call Configuration Manager.</description>
        <formula>IF(MobilePhone != null, HYPERLINK(&quot;skype:&quot;+IF( ClickToDial__Country_Code__c != null,ClickToDial__Country_Code__c, $Setup.ClickToDial__ConfigurationManager__c.ClickToDial__Global_Country_Code__c ) &amp; SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(MobilePhone, &apos;-&apos;, &apos;&apos;),&apos; &apos; ,&apos;&apos;),&apos;)&apos;,&apos;&apos;),&apos;(&apos;,&apos;&apos;),&apos;.&apos;,&apos;&apos;),&apos;,&apos;,&apos;&apos;) +&quot;?call&quot;, IF( ClickToDial__Country_Code__c != null,ClickToDial__Country_Code__c, $Setup.ClickToDial__ConfigurationManager__c.ClickToDial__Global_Country_Code__c ) &amp; SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(MobilePhone, &apos;-&apos;, &apos;&apos;),&apos; &apos; ,&apos;&apos;),&apos;)&apos;,&apos;&apos;),&apos;(&apos;,&apos;&apos;),&apos;.&apos;,&apos;&apos;),&apos;,&apos;,&apos;&apos;) , &quot;_self\&quot; onclick=\&quot;createTask(&apos;&quot;+ MobilePhone+&quot;&apos;, &apos;&quot;+ Id +&quot;&apos;,&apos;&quot;+ $Api.Session_ID +&quot;&apos;,true,&apos;&quot;+ $User.Id +&quot;&apos;,&apos;&quot;+$Setup.ClickToDial__ConfigurationManager__c.ClickToDial__EnableAutoCallLog__c+&quot;&apos;);\&quot; &quot;),&apos;&apos;)</formula>
        <inlineHelpText>You must dial + then the country code and number you wish to call. Example: +12125551313.
Specify the global country code setting or record level country code to automatically add &quot;+country code&quot; to your Click-to-Call links.</inlineHelpText>
        <label>Click-to-Call Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClickToDial__Click_to_Call_Phone__c</fullName>
        <description>You must dial + then the country code and number you wish to call. Example: +12125551313.
Specify the global country code setting or record level country code to automatically add &quot;+country code&quot; to your Click-to-Call links. GoTo App Setup| Customize| Develop| Custom Settings| Click-to-Call Configuration Manager.</description>
        <formula>IF(Phone != null, HYPERLINK(&quot;skype:&quot;+IF( ClickToDial__Country_Code__c != null,ClickToDial__Country_Code__c, $Setup.ClickToDial__ConfigurationManager__c.ClickToDial__Global_Country_Code__c ) &amp;  SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Phone, &apos;-&apos;, &apos;&apos;),&apos; &apos; ,&apos;&apos;),&apos;)&apos;,&apos;&apos;),&apos;(&apos;,&apos;&apos;),&apos;.&apos;,&apos;&apos;),&apos;,&apos;,&apos;&apos;) +&quot;?call&quot;, IF( ClickToDial__Country_Code__c != null,ClickToDial__Country_Code__c, $Setup.ClickToDial__ConfigurationManager__c.ClickToDial__Global_Country_Code__c ) &amp; SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Phone, &apos;-&apos;, &apos;&apos;),&apos; &apos; ,&apos;&apos;),&apos;)&apos;,&apos;&apos;),&apos;(&apos;,&apos;&apos;),&apos;.&apos;,&apos;&apos;),&apos;,&apos;,&apos;&apos;) , &quot;_self\&quot; onclick=\&quot;createTask(&apos;&quot;+ Phone +&quot;&apos;, &apos;&quot;+ Id +&quot;&apos;,&apos;&quot;+ $Api.Session_ID +&quot;&apos;,true,&apos;&quot;+ $User.Id  +&quot;&apos;,&apos;&quot;+$Setup.ClickToDial__ConfigurationManager__c.ClickToDial__EnableAutoCallLog__c+&quot;&apos;);\&quot; &quot;),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>You must dial + then the country code and number you wish to call. Example: +12125551313.
Specify the global country code setting or record level country code to automatically add &quot;+country code&quot; to your Click-to-Call links.</inlineHelpText>
        <label>Click-to-Call Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClickToDial__Click_to_Call_Skype__c</fullName>
        <formula>IF( LEN(ClickToDial__Skype_Username__c) &gt; 0, HYPERLINK(&quot;skype:&quot; &amp; ClickToDial__Skype_Username__c &amp; &quot;?call&quot;, ClickToDial__Skype_Username__c, &quot;_self\&quot; onclick=\&quot;createTask(&apos;&quot;+ ClickToDial__Skype_Username__c +&quot;&apos;, &apos;&quot;+ Id +&quot;&apos;,&apos;&quot;+ $Api.Session_ID +&quot;&apos;,false,&apos;&quot;+ $User.Id  +&quot;&apos;,  &apos;&quot;+$Setup.ClickToDial__ConfigurationManager__c.ClickToDial__EnableAutoCallLog__c+&quot;&apos; );\&quot; &quot;), &quot;No Skype ID&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Click-to-Call Skype</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClickToDial__Country_Code__c</fullName>
        <description>Specify the record level country code to override global country code setting. Value from this field will be added to your Click-to-Call links(only this record). Leave this field blank if your phone numbers already have country code. Example Value: +1</description>
        <inlineHelpText>Specify the record level country code to override global country code setting. Value from this field will be added to your Click-to-Call links(only this record). Leave this field blank if your phone numbers already have country code. Example Value: +1</inlineHelpText>
        <label>Country Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClickToDial__Skype_Username__c</fullName>
        <label>Skype Username</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <label>Primary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductInterest__c</fullName>
        <label>Product Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1000 series</fullName>
                </value>
                <value>
                    <fullName>GC5000 series</fullName>
                </value>
                <value>
                    <fullName>GC3000 series</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SICCode__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notContain</operation>
            <value>closed</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <listViews>
        <fullName>ViewCustom1</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <label>View - Custom 1</label>
    </listViews>
    <listViews>
        <fullName>ViewCustom2</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <label>View - Custom 2</label>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>